[package]
name = "nft_shop"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_shop"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", features = ["init-if-needed"] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor" }
spl-token = "3.5.0"
mpl-token-metadata = { version = "1.9.1", features = [ "no-entrypoint" ] }
nft_minter = { path = "../nft_minter", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.14"
anchor-client = { git = "https://github.com/coral-xyz/anchor" }
